@@ -2,16 +2,30 @@
 # For details: https://github.com/PyCQA/pylint/blob/main/LICENSE
 # Copyright (c) https://github.com/PyCQA/pylint/blob/main/CONTRIBUTORS.txt
 
+from __future__ import annotations
+
 import abc
+import warnings
+from typing import TYPE_CHECKING, Any
+
+if TYPE_CHECKING:
+    from pylint.lint import PyLinter
 
 
 class MapReduceMixin(metaclass=abc.ABCMeta):
     """A mixin design to allow multiprocess/threaded runs of a Checker."""
 
+    def __init__(self) -> None:
+        warnings.warn(
+            "MapReduceMixin has been deprecated and will be removed in pylint 3.0. "
+            "To make a checker reduce map data simply implement get_map_data and reduce_map_data.",
+            DeprecationWarning,
+        )
+
     @abc.abstractmethod
-    def get_map_data(self):
+    def get_map_data(self) -> Any:
         """Returns mergeable/reducible data that will be examined."""
 
     @abc.abstractmethod
-    def reduce_map_data(self, linter, data):
+    def reduce_map_data(self, linter: PyLinter, data: list[Any]) -> None:
         """For a given Checker, receives data for all mapped runs."""
